# fsm_llm

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  EVALUATE.md  LLM.md  MANIFEST.in  Makefile  README.md  README_LLM.md  REVIEW_REPORT.md  SECURITY.md  constraints.txt  digest.txt  pyproject.toml  requirements.txt  run_all_examples.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
docs/: api_reference.md  architecture.md  deepagents.md  fsm_design.md  fsm_handler_integration_guide.md  handlers.md  hierarchical_state_machines_extension.md  lambda.md  lambda_fsm_merge.md  lambda_integration.md  migration_0.7_to_0.8.md  migration_0.8_to_0.9.md  monitor.md  quickstart.md  strands_features.md  strands_features_phase_1.md  strands_features_phase_2.md  threat_model.md
docs/archive/: README.md  lambda_integration.md  migration_0.6_to_0.7.md  strands_features.md  strands_features_phase_1.md
evaluation/: 2026-03-28:10-00_36aed00_qwen3.5-4b.md  2026-03-28:11-45_36aed00_qwen3.5-4b.md  2026-03-28:18-30_6e22fc2_qwen3.5-4b.md  2026-03-28:20-05_7928630_qwen3.5-4b.md  2026-03-28:21-20_ae95ec3_qwen3.5-4b.md  bench_long_context_2026-04-25T06-18-06Z.json  bench_long_context_2026-04-25T11-36-05Z.json  bench_long_context_2026-04-25T11-36-57Z.json  bench_long_context_2026-04-26T05-57-40Z.json  bench_long_context_2026-04-26T14-35-44Z.json  bench_long_context_2026-04-26T14-36-33Z.json  bench_long_context_2026-04-26T14-36-50Z.json  m3_slice2_reasoning_scorecard.json  m3_slice3_workflow_scorecard.json  slice6_dataset_mhd.json  slice6_dataset_niah.json  slice7_oolong_synth.json
evaluation/2026-03-29_14-45_453e22f_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-29_16-01_453e22f_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-29_16-45_232ce8a_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-29_17-05_232ce8a_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-29_17-21_232ce8a_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-29_18-17_4eb7e3c_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-29_18-40_4eb7e3c_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-29_18-41_4eb7e3c_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-29_18-42_4eb7e3c_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-29_18-43_4eb7e3c_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-29_18-45_4eb7e3c_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-29_18-47_4eb7e3c_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-29_19-21_4eb7e3c_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-29_19-23_4eb7e3c_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-29_19-25_4eb7e3c_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-29_19-26_4eb7e3c_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-29_19-27_4eb7e3c_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-29_20-19_7d54bad_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-29_21-43_7d54bad_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-29_22-46_416c3b8_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-29_23-06_416c3b8_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-29_23-34_416c3b8_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-29_23-40_416c3b8_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-29_post-fix_agents/: results.json  scorecard.md
evaluation/2026-03-30_10-06_aa7a792_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-30_11-16_ae21348_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-30_14-16_f8aa41c_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-30_14-59_7a69714_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-31_10-34_7c62714_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-31_11-18_b7ce881_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-31_11-23_b7ce881_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-31_12-41_b7ce881_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-03-31_14-35_0b892d2_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-04-01_18-30_57d88f9_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-04-01_19-40_2681cca_qwen3.5-4b/: results.json  scorecard.md
evaluation/2026-04-01_23-35_4025a78_qwen3.5-4b/: results.json  scorecard.md
evaluation/datasets/: .gitignore  README.md  oolong_synth.jsonl  oolong_synth_real_subset.jsonl  oolpairs_synth.jsonl
examples/: README.md  personal_information_collection.json  three_little_pigs_story_time.json
examples/pipeline/: __init__.py  _helpers.py
scripts/: agent_chat_harness.py  audit_pth.py  bench_long_context.py  bench_reasoning_factories.py  bench_workflow_factories.py  eval.py  harness_bench.py
scripts/bench_data/: README.md
scripts/datasets/: __init__.py  oolong_loader.py
src/: example_1.py  fsm.py  fsm_loader.py  fsm_manager.py  fsm_visualizer.py  loader.py  logging.py  main.py  visualizer.py
src/fsm_llm/: CLAUDE.md  README.md  __init__.py  __main__.py  _models.py  api.py  ast.py  classification.py  combinators.py  constants.py  context.py  debug.py  definitions.py  dsl.py  errors.py  expressions.py  factories.py  fsm.py  handlers.py  llm.py  logging.py  memory.py  ollama.py  pipeline.py  profiles.py  program.py  prompts.py  runner.py  session.py  transition_evaluator.py  types.py  utilities.py  validator.py  visualizer.py
src/fsm_llm_2/: __init__.py  __main__.py  api.py  constants.py  definitions.py  expressions.py  fsm.py  handlers.py  llm.py  logging.py  prompts.py  transition_evaluator.py  utilities.py
src/fsm_llm_agents/: CLAUDE.md  README.md  __init__.py  __main__.py  adapt.py  agent_graph.py  auto_memory.py  base.py  composition.py  constants.py  debate.py  definitions.py  evaluator_optimizer.py  exceptions.py  fsm_definitions.py  handlers.py  hitl.py  maker_checker.py  mcp.py  memory_persistence.py  (+28 more)
tests/: conftest.py  test_harness_bench.py  test_integration_ollama.py  test_packaging.py
(+871 files in other folders)
