[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "0.3.0"
name = "fsm-llm"
description = "Finite State Machines for Large Language Models"
readme = "README.md"
authors = [{name = "Nikolas Markou", email = "nikolasmarkou@gmail.com"}]
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "llm", "fsm", "finite state machine",
    "large language model", "conversation",
    "ai workflows", "agentic workflows"
]

# Core dependencies (minimal)
dependencies = [
    "loguru>=0.7.3",
    "litellm>=1.82.0,<2.0,!=1.82.7,!=1.82.8",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
]

requires-python = ">=3.10"

# Optional extras
[project.optional-dependencies]
workflows = []  # No additional deps; validation uses plain Python DFS
reasoning = []       # No additional deps; included in core install
agents = []          # No additional deps; included in core install
monitor = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "jinja2>=3.1.0",
]
mcp = ["mcp>=1.0.0"]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]
a2a = ["httpx>=0.24.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.5.0",
]
all = [
    "fsm-llm[workflows]",
    "fsm-llm[reasoning]",
    "fsm-llm[agents]",
    "fsm-llm[monitor]",
    "fsm-llm[mcp]",
    "fsm-llm[otel]",
    "fsm-llm[a2a]",
]

[project.urls]
"Homepage" = "https://github.com/NikolasMarkou/fsm_llm"
"Bug Tracker" = "https://github.com/NikolasMarkou/fsm_llm/issues"

# Core CLI tools (always available)
[project.scripts]
fsm-llm = "fsm_llm.__main__:main_cli"
fsm-llm-visualize = "fsm_llm.visualizer:main_cli"
fsm-llm-validate = "fsm_llm.validator:main_cli"
fsm-llm-monitor = "fsm_llm_monitor.__main__:main_cli"
fsm-llm-meta = "fsm_llm_agents.meta_cli:main_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fsm_llm = ["py.typed"]
fsm_llm_reasoning = ["py.typed"]
fsm_llm_workflows = ["py.typed"]
fsm_llm_agents = ["py.typed"]
fsm_llm_monitor = ["py.typed", "static/*", "templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
    "examples: marks example tests",
    "real_llm: marks tests requiring real LLM API",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort (import sorting)
    "UP",    # pyupgrade (Python version upgrades)
    "B",     # flake8-bugbear
    "RUF",   # ruff-specific rules
]
ignore = [
    "E402",    # module-level import not at top (from __future__)
    "E501",    # line too long (handled by formatter)
    "RUF013",  # implicit Optional — too many signatures to change safely
    "RUF001",  # ambiguous unicode — intentional in test/prompt data
    "RUF022",  # __all__ not sorted — current order is semantically grouped
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "B017"]  # tests may use assert True/False and assertRaises
"examples/*" = ["E501"]
"src/fsm_llm_monitor/*" = ["RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["fsm_llm", "fsm_llm_reasoning", "fsm_llm_workflows", "fsm_llm_agents", "fsm_llm_monitor"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_defs = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
