[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "0.5.0"
name = "fsm-llm"
description = "Finite State Machines for Large Language Models"
readme = "README.md"
authors = [{name = "Nikolas Markou", email = "nikolasmarkou@gmail.com"}]
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "llm", "fsm", "finite state machine",
    "large language model", "conversation",
    "ai workflows", "agentic workflows"
]

# Core dependencies (minimal)
dependencies = [
    "loguru>=0.7.3",
    "litellm>=1.82.0,<2.0,!=1.82.7,!=1.82.8",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    # DECISION plan-2026-07-19T075908-70b6bdec/D-002
    # Do NOT remove this as an "unused" dependency: nothing in src/ imports tenacity directly.
    # It is required by litellm's sync retry paths (litellm/main.py, and litellm/utils.py dispatching
    # to completion_with_retries), which open with an unconditional `import tenacity` and raise a
    # BARE Exception on ImportError with no fallback. litellm does not declare it itself (verified via
    # importlib.metadata.requires('litellm') on 1.82.6), so without this line `num_retries` is
    # accepted through **kwargs but silently non-functional. See decisions.md D-002.
    "tenacity>=8.0",
]

requires-python = ">=3.10"

# Optional extras
[project.optional-dependencies]
workflows = []  # No additional deps; validation uses plain Python DFS
reasoning = []       # No additional deps; included in core install
agents = []          # No additional deps; included in core install
monitor = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "jinja2>=3.1.0",
]
mcp = ["mcp>=1.0.0"]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]
a2a = ["httpx>=0.24.0"]
# The harness ships no third-party deps of its own; it is listed as an extra so it
# appears in the `all` set and in the dev/CI install lists. It imports
# `fsm_llm_agents`, which is why that extra is named here rather than `[]`.
harness = ["fsm-llm[agents]"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    # The exact version is pinned in constraints.txt, not here — see the pin block there.
    "mypy>=2.0",
]
all = [
    "fsm-llm[workflows]",
    "fsm-llm[reasoning]",
    "fsm-llm[agents]",
    "fsm-llm[monitor]",
    "fsm-llm[harness]",
    "fsm-llm[mcp]",
    "fsm-llm[otel]",
    "fsm-llm[a2a]",
]

[project.urls]
"Homepage" = "https://github.com/NikolasMarkou/fsm_llm"
"Bug Tracker" = "https://github.com/NikolasMarkou/fsm_llm/issues"

# Core CLI tools (always available)
[project.scripts]
fsm-llm = "fsm_llm.__main__:main_cli"
fsm-llm-visualize = "fsm_llm.visualizer:main_cli"
fsm-llm-validate = "fsm_llm.validator:main_cli"
fsm-llm-monitor = "fsm_llm_monitor.__main__:main_cli"
fsm-llm-meta = "fsm_llm_agents.meta_cli:main_cli"
fsm-llm-harness = "fsm_llm_harness.__main__:main_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fsm_llm = ["py.typed"]
fsm_llm_reasoning = ["py.typed"]
fsm_llm_workflows = ["py.typed"]
fsm_llm_agents = ["py.typed"]
fsm_llm_monitor = ["py.typed", "static/*", "templates/*"]
fsm_llm_harness = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
    "examples: marks example tests",
    "real_llm: marks tests requiring real LLM API",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort (import sorting)
    "UP",    # pyupgrade (Python version upgrades)
    "B",     # flake8-bugbear
    "RUF",   # ruff-specific rules
]
ignore = [
    "E402",    # module-level import not at top (from __future__)
    "E501",    # line too long (handled by formatter)
    "RUF013",  # implicit Optional — too many signatures to change safely
    "RUF001",  # ambiguous unicode — intentional in test/prompt data
    "RUF022",  # __all__ not sorted — current order is semantically grouped
    # UP038 was REMOVED from ruff upstream as withdrawn advice: PEP 604 syntax in
    # isinstance/issubclass is not recommended practice and is slightly slower
    # (`ruff rule UP038`). The .venv pins ruff 0.15.22 (constraints.txt), which no
    # longer has the rule, but .pre-commit-config.yaml pins ruff-pre-commit v0.9.10,
    # which still emits it — so `ruff check` was clean while pre-push failed on 11
    # pre-existing sites. This ignore is honoured by 0.9.10 and inert under 0.15.22.
    # DO NOT "clean this up": removing it re-breaks pre-push until the hook rev is
    # bumped to match the constraints.txt pin.
    "UP038",   # non-pep604-isinstance — withdrawn upstream; see note above
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "B017"]  # tests may use assert True/False and assertRaises
"examples/*" = ["E501"]
"src/fsm_llm_monitor/*" = ["RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["fsm_llm", "fsm_llm_reasoning", "fsm_llm_workflows", "fsm_llm_agents", "fsm_llm_monitor", "fsm_llm_harness"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_defs = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
